; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_env_set.c_env_set_print.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_env_set.c_env_set_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.env_set = type { %struct.env_item* }
%struct.env_item = type { %struct.env_item*, i32 }

@.str = private unnamed_addr constant [14 x i8] c"ENV [%d] '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @env_set_print(i32 %0, %struct.env_set* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.env_set*, align 8
  %5 = alloca %struct.env_item*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.env_set* %1, %struct.env_set** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @check_debug_level(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %41

10:                                               ; preds = %2
  %11 = load %struct.env_set*, %struct.env_set** %4, align 8
  %12 = icmp ne %struct.env_set* %11, null
  br i1 %12, label %13, label %40

13:                                               ; preds = %10
  %14 = load %struct.env_set*, %struct.env_set** %4, align 8
  %15 = getelementptr inbounds %struct.env_set, %struct.env_set* %14, i32 0, i32 0
  %16 = load %struct.env_item*, %struct.env_item** %15, align 8
  store %struct.env_item* %16, %struct.env_item** %5, align 8
  store i32 0, i32* %6, align 4
  br label %17

17:                                               ; preds = %33, %13
  %18 = load %struct.env_item*, %struct.env_item** %5, align 8
  %19 = icmp ne %struct.env_item* %18, null
  br i1 %19, label %20, label %39

20:                                               ; preds = %17
  %21 = load %struct.env_item*, %struct.env_item** %5, align 8
  %22 = getelementptr inbounds %struct.env_item, %struct.env_item* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = call i64 @env_safe_to_print(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %33

26:                                               ; preds = %20
  %27 = load i32, i32* %3, align 4
  %28 = load i32, i32* %6, align 4
  %29 = load %struct.env_item*, %struct.env_item** %5, align 8
  %30 = getelementptr inbounds %struct.env_item, %struct.env_item* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @msg(i32 %27, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %28, i32 %31)
  br label %33

33:                                               ; preds = %26, %20
  %34 = load i32, i32* %6, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %6, align 4
  %36 = load %struct.env_item*, %struct.env_item** %5, align 8
  %37 = getelementptr inbounds %struct.env_item, %struct.env_item* %36, i32 0, i32 0
  %38 = load %struct.env_item*, %struct.env_item** %37, align 8
  store %struct.env_item* %38, %struct.env_item** %5, align 8
  br label %17

39:                                               ; preds = %17
  br label %40

40:                                               ; preds = %39, %10
  br label %41

41:                                               ; preds = %40, %2
  ret void
}

declare dso_local i64 @check_debug_level(i32) #1

declare dso_local i64 @env_safe_to_print(i32) #1

declare dso_local i32 @msg(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
